cvm/asm/src/io/cvm/asm/antlr/CVMasmParser.java
// Generated from /home/nikhil/super/cvm/asm/CVMasm.g4 by ANTLR 4.7
package io.cvm.asm.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CVMasmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MOVE=1, MOVEL=2, INT=3, OFF=4, ADD=5, SUB=6, MUL=7, DIV=8, COPY=9, COPYL=10, 
		OUT=11, OUTL=12, SET=13, SETL=14, HALT=15, BEGIN=16, END=17, EOS=18, STRING=19, 
		CHARACTER=20, WS=21;
	public static final int
		RULE_add_cmd = 0, RULE_sub_cmd = 1, RULE_mul_cmd = 2, RULE_div_cmd = 3, 
		RULE_addv_cmd = 4, RULE_subv_cmd = 5, RULE_mulv_cmd = 6, RULE_divv_cmd = 7, 
		RULE_set_cmd = 8, RULE_setl_cmd = 9, RULE_otype = 10, RULE_out_cmd = 11, 
		RULE_outl_cmd = 12, RULE_mov_cmd = 13, RULE_movl_cmd = 14, RULE_cpy_cmd = 15, 
		RULE_cpyl_cmd = 16, RULE_halt_cmd = 17, RULE_cmd = 18, RULE_cmdlist = 19, 
		RULE_program = 20;
	public static final String[] ruleNames = {
		"add_cmd", "sub_cmd", "mul_cmd", "div_cmd", "addv_cmd", "subv_cmd", "mulv_cmd", 
		"divv_cmd", "set_cmd", "setl_cmd", "otype", "out_cmd", "outl_cmd", "mov_cmd", 
		"movl_cmd", "cpy_cmd", "cpyl_cmd", "halt_cmd", "cmd", "cmdlist", "program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'mov'", "'movl'", null, null, "'add'", "'sub'", "'mul'", "'div'", 
		"'cpy'", "'cpyl'", "'out'", "'outl'", "'set'", "'setl'", "'hlt'", "'begin'", 
		"'end'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "MOVE", "MOVEL", "INT", "OFF", "ADD", "SUB", "MUL", "DIV", "COPY", 
		"COPYL", "OUT", "OUTL", "SET", "SETL", "HALT", "BEGIN", "END", "EOS", 
		"STRING", "CHARACTER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CVMasm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CVMasmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Add_cmdContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(CVMasmParser.ADD, 0); }
		public List<TerminalNode> INT() { return getTokens(CVMasmParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CVMasmParser.INT, i);
		}
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Add_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterAdd_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitAdd_cmd(this);
		}
	}

	public final Add_cmdContext add_cmd() throws RecognitionException {
		Add_cmdContext _localctx = new Add_cmdContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_add_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(ADD);
			setState(43);
			match(INT);
			setState(44);
			match(INT);
			setState(45);
			match(OFF);
			setState(46);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sub_cmdContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(CVMasmParser.SUB, 0); }
		public List<TerminalNode> INT() { return getTokens(CVMasmParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CVMasmParser.INT, i);
		}
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Sub_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterSub_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitSub_cmd(this);
		}
	}

	public final Sub_cmdContext sub_cmd() throws RecognitionException {
		Sub_cmdContext _localctx = new Sub_cmdContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sub_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(SUB);
			setState(49);
			match(INT);
			setState(50);
			match(INT);
			setState(51);
			match(OFF);
			setState(52);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mul_cmdContext extends ParserRuleContext {
		public TerminalNode MUL() { return getToken(CVMasmParser.MUL, 0); }
		public List<TerminalNode> INT() { return getTokens(CVMasmParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CVMasmParser.INT, i);
		}
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Mul_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mul_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterMul_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitMul_cmd(this);
		}
	}

	public final Mul_cmdContext mul_cmd() throws RecognitionException {
		Mul_cmdContext _localctx = new Mul_cmdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mul_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(MUL);
			setState(55);
			match(INT);
			setState(56);
			match(INT);
			setState(57);
			match(OFF);
			setState(58);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Div_cmdContext extends ParserRuleContext {
		public TerminalNode DIV() { return getToken(CVMasmParser.DIV, 0); }
		public List<TerminalNode> INT() { return getTokens(CVMasmParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CVMasmParser.INT, i);
		}
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Div_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterDiv_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitDiv_cmd(this);
		}
	}

	public final Div_cmdContext div_cmd() throws RecognitionException {
		Div_cmdContext _localctx = new Div_cmdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_div_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(DIV);
			setState(61);
			match(INT);
			setState(62);
			match(INT);
			setState(63);
			match(OFF);
			setState(64);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Addv_cmdContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(CVMasmParser.ADD, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Addv_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addv_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterAddv_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitAddv_cmd(this);
		}
	}

	public final Addv_cmdContext addv_cmd() throws RecognitionException {
		Addv_cmdContext _localctx = new Addv_cmdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_addv_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(ADD);
			setState(67);
			match(OFF);
			setState(68);
			match(OFF);
			setState(69);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Subv_cmdContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(CVMasmParser.SUB, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Subv_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subv_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterSubv_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitSubv_cmd(this);
		}
	}

	public final Subv_cmdContext subv_cmd() throws RecognitionException {
		Subv_cmdContext _localctx = new Subv_cmdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subv_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(SUB);
			setState(72);
			match(OFF);
			setState(73);
			match(OFF);
			setState(74);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mulv_cmdContext extends ParserRuleContext {
		public TerminalNode MUL() { return getToken(CVMasmParser.MUL, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Mulv_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mulv_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterMulv_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitMulv_cmd(this);
		}
	}

	public final Mulv_cmdContext mulv_cmd() throws RecognitionException {
		Mulv_cmdContext _localctx = new Mulv_cmdContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mulv_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(MUL);
			setState(77);
			match(OFF);
			setState(78);
			match(OFF);
			setState(79);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Divv_cmdContext extends ParserRuleContext {
		public TerminalNode DIV() { return getToken(CVMasmParser.DIV, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Divv_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_divv_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterDivv_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitDivv_cmd(this);
		}
	}

	public final Divv_cmdContext divv_cmd() throws RecognitionException {
		Divv_cmdContext _localctx = new Divv_cmdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_divv_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(DIV);
			setState(82);
			match(OFF);
			setState(83);
			match(OFF);
			setState(84);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_cmdContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(CVMasmParser.SET, 0); }
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public TerminalNode INT() { return getToken(CVMasmParser.INT, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Set_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterSet_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitSet_cmd(this);
		}
	}

	public final Set_cmdContext set_cmd() throws RecognitionException {
		Set_cmdContext _localctx = new Set_cmdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_set_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(SET);
			setState(87);
			match(OFF);
			setState(88);
			match(INT);
			setState(89);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Setl_cmdContext extends ParserRuleContext {
		public TerminalNode SETL() { return getToken(CVMasmParser.SETL, 0); }
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public List<TerminalNode> INT() { return getTokens(CVMasmParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CVMasmParser.INT, i);
		}
		public Setl_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setl_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterSetl_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitSetl_cmd(this);
		}
	}

	public final Setl_cmdContext setl_cmd() throws RecognitionException {
		Setl_cmdContext _localctx = new Setl_cmdContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_setl_cmd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(SETL);
			setState(92);
			match(OFF);
			setState(94); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				match(INT);
				}
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INT );
			setState(98);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(CVMasmParser.INT, 0); }
		public TerminalNode CHARACTER() { return getToken(CVMasmParser.CHARACTER, 0); }
		public OtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterOtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitOtype(this);
		}
	}

	public final OtypeContext otype() throws RecognitionException {
		OtypeContext _localctx = new OtypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_otype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==CHARACTER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Out_cmdContext extends ParserRuleContext {
		public TerminalNode OUT() { return getToken(CVMasmParser.OUT, 0); }
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public OtypeContext otype() {
			return getRuleContext(OtypeContext.class,0);
		}
		public TerminalNode INT() { return getToken(CVMasmParser.INT, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Out_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_out_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterOut_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitOut_cmd(this);
		}
	}

	public final Out_cmdContext out_cmd() throws RecognitionException {
		Out_cmdContext _localctx = new Out_cmdContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_out_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(OUT);
			setState(103);
			match(OFF);
			setState(104);
			otype();
			setState(105);
			match(INT);
			setState(106);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Outl_cmdContext extends ParserRuleContext {
		public TerminalNode OUT() { return getToken(CVMasmParser.OUT, 0); }
		public TerminalNode OFF() { return getToken(CVMasmParser.OFF, 0); }
		public TerminalNode INT() { return getToken(CVMasmParser.INT, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public TerminalNode STRING() { return getToken(CVMasmParser.STRING, 0); }
		public List<OtypeContext> otype() {
			return getRuleContexts(OtypeContext.class);
		}
		public OtypeContext otype(int i) {
			return getRuleContext(OtypeContext.class,i);
		}
		public Outl_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outl_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterOutl_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitOutl_cmd(this);
		}
	}

	public final Outl_cmdContext outl_cmd() throws RecognitionException {
		Outl_cmdContext _localctx = new Outl_cmdContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_outl_cmd);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(OUT);
			setState(109);
			match(OFF);
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHARACTER:
				{
				setState(111); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(110);
						otype();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(113); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case STRING:
				{
				setState(115);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(118);
			match(INT);
			setState(119);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mov_cmdContext extends ParserRuleContext {
		public TerminalNode MOVE() { return getToken(CVMasmParser.MOVE, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Mov_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mov_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterMov_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitMov_cmd(this);
		}
	}

	public final Mov_cmdContext mov_cmd() throws RecognitionException {
		Mov_cmdContext _localctx = new Mov_cmdContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_mov_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(MOVE);
			setState(122);
			match(OFF);
			setState(123);
			match(OFF);
			setState(124);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Movl_cmdContext extends ParserRuleContext {
		public TerminalNode MOVEL() { return getToken(CVMasmParser.MOVEL, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode INT() { return getToken(CVMasmParser.INT, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Movl_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_movl_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterMovl_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitMovl_cmd(this);
		}
	}

	public final Movl_cmdContext movl_cmd() throws RecognitionException {
		Movl_cmdContext _localctx = new Movl_cmdContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_movl_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(MOVEL);
			setState(127);
			match(OFF);
			setState(128);
			match(OFF);
			setState(129);
			match(INT);
			setState(130);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cpy_cmdContext extends ParserRuleContext {
		public TerminalNode COPY() { return getToken(CVMasmParser.COPY, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Cpy_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cpy_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterCpy_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitCpy_cmd(this);
		}
	}

	public final Cpy_cmdContext cpy_cmd() throws RecognitionException {
		Cpy_cmdContext _localctx = new Cpy_cmdContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_cpy_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(COPY);
			setState(133);
			match(OFF);
			setState(134);
			match(OFF);
			setState(135);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cpyl_cmdContext extends ParserRuleContext {
		public TerminalNode COPYL() { return getToken(CVMasmParser.COPYL, 0); }
		public List<TerminalNode> OFF() { return getTokens(CVMasmParser.OFF); }
		public TerminalNode OFF(int i) {
			return getToken(CVMasmParser.OFF, i);
		}
		public TerminalNode INT() { return getToken(CVMasmParser.INT, 0); }
		public TerminalNode EOS() { return getToken(CVMasmParser.EOS, 0); }
		public Cpyl_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cpyl_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).enterCpyl_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CVMasmListener ) ((CVMasmListener)listener).exitCpyl_cmd(this);
		}
	}
